--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-github-calendar": "^3.4.0",
     "react-icons": "^4.7.1",
+    "react-parallax-tilt": "^1.7.109",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.9.3",
