--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://adityapam21.github.io",
+  "homepage": "https://adityapam21.github.io/Resume-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "gh": "^2.8.9",
+    "gh-pages":"^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-github-calendar": "^3.4.0",
     "react-icons": "^4.7.1",
     "react-parallax-tilt": "^1.7.109",
+    "save-dev": "^0.0.1-security",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.9.3",
@@ -45,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
